--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI='mongodb://127.0.0.1:27017/online_quizz_app'
+MONGO_URI='mongodb+srv://sreesankar:sreesankar@quizz-app.8ri5ezw.mongodb.net/quiz-app?retryWrites=true&w=majority&appName=Quizz-App'
 # JWT_SECRET=jwt_secret
 JWT_SECRET = 'sree12#34'
